deploy/base/routing/routing-ingress.yaml
# ----------------------------------------------------------------------
# Copyright (c) 2021, 2022 Oracle and/or its affiliates. All rights reserved.
# The Universal Permissive License (UPL), Version 1.0
# ----------------------------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixelstream-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - pixel.example.com
      secretName: pixelstream-tls-secret
  rules:
    - host: pixel.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                # traefik router service
                name: router
                port:
                  number: 80
